# ftl-cli

./: Cargo.toml
.github/workflows/: ci.yml  release-cli.yml  release-sdk-python.yml
components/mcp-authorizer/: Cargo.toml
components/mcp-gateway/: Cargo.toml
