[workspace]
resolver = "3"
members = [
    "crates/*",
    "components/*",
    "sdk/rust",
    "sdk/rust-macros",
    "cli",
]
# Exclude WebAssembly components from default builds since they require
# cargo-component and must be built with: cargo component build --target wasm32-wasip1
default-members = [
    "crates/*",
    "sdk/rust",
    "sdk/rust-macros",
    "cli",
]
# Exclude examples and templates
exclude = [
    "examples",
    "templates",
]

# Note: WebAssembly components are in the components/ directory
# Build them with: cargo component build -p <component-name> --release --target wasm32-wasip1
# Build all components: cargo component build --workspace --release --target wasm32-wasip1

[workspace.package]
edition = "2024"
rust-version = "1.89"
authors = ["FTL Contributors"]
license = "Apache-2.0"
repository = "https://github.com/fastertools/ftl-cli"
homepage = "https://github.com/fastertools/ftl-cli"

[workspace.dependencies]
# Common dependencies used across workspace
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
toml_edit = "0.23"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros", "time", "process", "signal", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8"
which = "8.0"
handlebars = "6.0"
walkdir = "2.4"
notify = "8.1"
include_dir = "0.7"
cargo_metadata = "0.21"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
indicatif = "0.18"
dialoguer = "0.11"
console = "0.16"
semver = "1.0"
regex = "1.11"
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "4.3"
webbrowser = "1.0"
# Keyring is only available on non-WASM targets
keyring = { version = "3.0", features = ["apple-native", "windows-native", "sync-secret-service"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
num_cpus = "1.16"
progenitor-client = "0.11.0"
futures = "0.3"
uuid = { version = "1.18", features = ["serde", "v4"] }
regress = "0.10"
async-trait = "0.1"
garde = { version = "0.22", features = ["derive", "regex"] }
once_cell = "1.20"

# Dev dependencies
mockall = "0.13"
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"
serial_test = "3.2"
rstest = "0.23"
pretty_assertions = "1.4"
wiremock = "0.6"
insta = { version = "1.41", features = ["yaml"] }
cargo-tarpaulin = "0.31"

# Optimization profiles
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.tiny]
inherits = "release"
opt-level = "z"

[profile.dev]
opt-level = 1
debug = true

# Workspace-wide linting configuration
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Deny categories
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# Warn categories  
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Specific lints to enable
missing_safety_doc = "warn"
use_self = "warn"
items_after_statements = "warn"
cognitive_complexity = "warn"
missing_const_for_fn = "warn"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_ok_or = "warn"
map_unwrap_or = "warn"
implicit_clone = "warn"
unused_async = "warn"
unused_self = "warn"
match_wildcard_for_single_variants = "warn"
needless_continue = "warn"
await_holding_lock = "deny"

# Disable some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"
